parsed nasa coefficient yaml file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,11 @@
 [project]
-name = "jetcalc"
+name = "jetCalc"
 version = "0.1.0"
-description = "Add your description here"
+description = "Thermodynamic analysis for propulsion applications"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.13"
 dependencies = [
     "numpy>=2.2.5",
+    "pyyaml>=6.0.2",
+    "ruff>=0.11.9",
 ]
