--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "numpy>=2.2.5",
+    "periodictable>=2.0.2",
     "pyyaml>=6.0.2",
     "ruff>=0.11.9",
 ]
