--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "numpy>=2.2.5",
     "periodictable>=2.0.2",
+    "pytest>=8.3.5",
     "pyyaml>=6.0.2",
     "ruff>=0.11.9",
 ]
